Fixed spacing and added border boxes

--- a/components/atoms/VideoPlayer/VideoPlayer.module.css
+++ b/components/atoms/VideoPlayer/VideoPlayer.module.css
@@ -1,11 +1,3 @@
-.container {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 15px;
-  align-items: flex-start;
-  padding: 5px 5%;
-}
-
 .container .videoList::-webkit-scrollbar {
   width: 7px;
 }
@@ -18,18 +10,4 @@
 .container .videoList::-webkit-scrollbar-thumb {
   background: #666;
   border-radius: 50px;
-}
-
-@media (max-width: 991px) {
-  .container {
-    grid-template-columns: 1.5fr 1fr;
-    padding: 10px;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    grid-template-columns: 1fr;
-    padding: 10px;
-  }
 }
